Publish Eventprocessing(BE) chart for 1.4.0

--- a/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/cp-bewebserver.yaml
+++ b/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/cp-bewebserver.yaml
@@ -32,8 +32,18 @@ spec:
 {{- end }}
     spec:
       automountServiceAccountToken: false
+      {{- with .Values.nodeSelector }}
       nodeSelector:
-        kubernetes.io/os: linux
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}        
       topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: "kubernetes.io/hostname"
@@ -55,37 +65,31 @@ spec:
       {{- end }}
       containers:
       - name: tp-iapp-be-server
-        image: {{ include "be-webserver.image.registry" . }}{{"/"}}{{ include "be-webserver.bews.image.repository" . }}{{"/"}}be-webserver:{{ .Values.global.be.data.BE_WEBSERVER_IMAGE_TAG }}
+        image: {{ include "be-webserver.image.registry" . }}{{"/"}}{{ include "be-webserver.bews.image.repository" . }}{{"/"}}be-webserver:{{ .Values.config.BE_WEBSERVER_IMAGE_TAG }}
         imagePullPolicy: IfNotPresent
         {{- with $.Values.securityContext }}
         securityContext:
         {{- toYaml $.Values.securityContext | nindent 10 }}
         {{- end }}
+        {{- if eq (include "be-webserver.enableResourceConstraints" . ) "true" }}
         resources:
         {{- toYaml .Values.bewebserver.resources | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: 7654
           name: server
+        {{- with $.Values.probes.startupProbe }}
+        startupProbe:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+        {{- with $.Values.probes.readinessProbe }}
         readinessProbe:
-          httpGet:
-            scheme: HTTP
-            path: "/api/v1/version"
-            port: 7654
-          initialDelaySeconds: 60
-          periodSeconds: 10
-          timeoutSeconds: 5
-          failureThreshold: 1
-          successThreshold: 1
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+        {{- with $.Values.probes.livenessProbe }}
         livenessProbe:
-          httpGet:
-            scheme: HTTP
-            path: "/api/v1/version"
-            port: 7654
-          initialDelaySeconds: 60
-          periodSeconds: 10
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 1
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         env:
         - name: TP_CP_MONITORING_HOST
           valueFrom:
@@ -122,14 +126,22 @@ spec:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: TSC_DNS_DOMAIN
         - name: HTTP_REQUEST_TIMEOUT
-          value: "120000"
+          value: {{ .Values.config.HTTP_REQUEST_TIMEOUT | quote }}
         - name: IDLE_TIME_SECONDS
-          value: "1800"
+          value: {{ .Values.config.IDLE_TIME_SECONDS | quote }}
         - name: WEB_SERVER_LOG_ENABLED
-          value: "true"
+          value: {{ .Values.config.WEB_SERVER_LOG_ENABLED | quote }}
         # FIXME: check what it is referring to in code
         - name: ENVIRONMENT_TYPE
           value: {{ (.Values.global.external.environment | lower) }}
+        - name: DEPLOYMENT_REGION
+          valueFrom:
+            configMapKeyRef:
+              name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
+              key: REGION
+        volumeMounts:
+          - name: logs-share
+            mountPath: /tmp/webserver-logs
 {{- if eq (include "be-webserver.cp-logging-fluentbit-enabled" .) "true" }}
       - name: fluentbit
         image: {{ include "be-webserver.image.registry" . }}{{"/"}}{{ include "be-webserver.bews.image.repository" . }}{{"/"}}{{ .Values.global.fluentbit.image.name }}:{{ .Values.global.fluentbit.image.tag }}
@@ -137,8 +149,14 @@ spec:
         securityContext:
         {{- toYaml $.Values.global.fluentbit.securityContext | nindent 10 }}
         {{- end }}
+        {{- with $.Values.global.fluentbit.probes.livenessProbe }}
+        livenessProbe:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+        {{- if eq (include "be-webserver.enableResourceConstraints" . ) "true" }}
         resources:
         {{- toYaml $.Values.fluentbit.resources | nindent 10 }}
+        {{- end }}
         env:
           - name: POD_NAMESPACE
             valueFrom:
@@ -158,40 +176,16 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
-{{- if .Values.global.cp }}
-{{- if .Values.global.cp.logServer }}
-{{- if .Values.global.cp.logServer.services }}
-          - name: LOG_SERVER_USERNAME
-            valueFrom:
-              secretKeyRef:
-                name: logserver-credentials
-                key: username
-          - name: LOG_SERVER_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: logserver-credentials
-                key: password
-{{- end }}
-{{- end }}
-{{- end }}
         volumeMounts:
-          - name: podlogs
+          - name: logs-share
             mountPath: /var/log/pods
-          - name: dockercontainerlogs
-            mountPath: /var/lib/docker/containers
           - name: config-volume
             mountPath: /fluent-bit/etc/
 {{- end }}
       volumes:
+        - name: logs-share
+          emptyDir: {}
 {{- if eq (include "be-webserver.cp-logging-fluentbit-enabled" .) "true" }}
-        - name: podlogs
-          hostPath:
-            path: /var/log/pods
-            type: Directory
-        - name: dockercontainerlogs
-          hostPath:
-            path: /var/lib/docker/containers
-            type: DirectoryOrCreate
         - name: config-volume
           configMap:
             name: {{ include "be-webserver.consts.appName" . }}-fluentbit-config
