--- a/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/fluentbit-configmap.yaml
+++ b/charts/tp-cp-eventprocessing-be/charts/be-webserver/templates/fluentbit-configmap.yaml
@@ -17,6 +17,9 @@ data:
       Log_Level         info
       Daemon            off
       Parsers_File      parsers.conf
+      HTTP_Server       On
+      HTTP_Listen       0.0.0.0
+      HTTP_Port         2020
 
     @INCLUDE input.conf
     @INCLUDE filter.conf
@@ -26,9 +29,9 @@ data:
     [INPUT]
       Name              tail
       Tag               cp.${POD_NAMESPACE}.${POD_NAME}.${POD_ID}.${CONTAINER_NAME}
-      Path              /var/log/pods/${POD_NAMESPACE}_${POD_NAME}_${POD_ID}/${CONTAINER_NAME}/*.log
+      Path              /var/log/pods/be-webserver.log
       multiline.parser  docker, cri
-      DB                /var/log/flb_kube.db
+      DB                /var/log/pods/flb_kube.db
       Mem_Buf_Limit     5MB
       Skip_Long_Lines   On
       Refresh_Interval  10
